--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.691.0",
+    "eslint": "^7.2.0",
+    "eslint-plugin-react": "^7.20.0",
+    "jest": "^26.0.1",
     "serverless-bundle": "^1.2.5",
     "serverless-dotenv-plugin": "^2.1.1",
     "serverless-offline": "^5.3.3"
   },
   "dependencies": {
+    "stripe": "^8.60.0",
     "uuid": "^7.0.3"
   }
 }
